install-microk8s-with-lb-ingress/trial-balance/trial-balance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trial-balance
  #namespace: default
  annotations:
    # https://github.com/ubuntu/microk8s/issues/2035
    kubernetes.io/ingress.class: public # was 'nginx' before microk8s 1.20
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  tls:
  - hosts: 
    - microk8s.local
    # secret must be in same namespace
    secretName: tls-credential
  rules:
  - host: microk8s.local
    http:
      paths:
      - pathType: Prefix #Exact
        path: "/tb/"
        backend:
          service:
            name: trial-balance-service
            port:
              number: 5000
